[package]
name = "{{crate_name}}"
version = "0.0.1"
authors = ["{{authors}}"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "1"

